<resources>
    <string name="app_name">Calculator</string>


    <string name="men"> MEN : </string>
    <string name="deg">  DEG</string>
    <string name="mc">MC</string>
    <string name="c">C</string>
    <string name="drg">DRG</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="factorial">n!</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="sqrt">sqrt</string>
    <string name="square">^</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="bksp">Bksp</string>
    <string name="tip">Tip:</string>
    <string name="welcome">Welcome to use!</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="exit">exit</string>
</resources>
